force-app/main/default/objects/Stay_Details__c/Stay_Details__c.object-meta.xml
<CustomObject>
    <label>Stay Details</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stay Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>