force-app/main/default/objects/Stay_Details__c/fields/Date_of_submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_submission__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>Current date will be automatically taken while you saving the record</inlineHelpText>
    <label>Date of submission</label>
    <type>DateTime</type>
</CustomField>