force-app/main/default/objects/Stay_Details__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <inlineHelpText>Reason for the travel</inlineHelpText>
    <label>Purpose</label>
    <length>50</length>
    <type>Text</type>
</CustomField>