force-app/main/default/objects/Stay_Details__c/fields/Reimbursement_paid__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Reimbursement has been made. This checkbox will be checked.</inlineHelpText>
    <label>Reimbursement paid</label>
    <type>Checkbox</type>
</CustomField>