force-app/main/default/objects/Stay_Details__c/fields/Travel_date_to__c.field-meta.xml
<CustomField>
    <fullName>Travel_date_to__c</fullName>
    <label>Travel date to</label>
    <type>DateTime</type>
</CustomField>